第一次修改

--- a/templates/plist.html
+++ b/templates/plist.html
@@ -41,7 +41,7 @@
 <h1>
     <img src="{{ blogBase['avatarUrl'] }}" class="avatar circle" id="avatarImg" alt="avatar">
     {%- if blogBase['displayTitle']=='eekdai' -%}
-    <a class="blogTitle" href="https://meekdai.com">{{ blogBase['displayTitle'] }}</a>
+    <a class="blogTitle" href="https://grdnet.org">{{ blogBase['displayTitle'] }}</a>
     {% else -%}
     <a class="blogTitle">{{ blogBase['displayTitle'] }}</a>
     {%- endif -%}
